--- a/aspnetcoreapp/Pages/Index.cshtml
+++ b/aspnetcoreapp/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello, World! The time on the servers is @DateTime.Now</p>
+    <p>Hello, World!</p>
+    </br>
+    <p>The time on the servers is @DateTime.Now</p>
 </div>
