Added several functions in order to read a json file and create a string from the hobbies array of Person

--- a/aspnetcoreapp/Pages/Index.cshtml
+++ b/aspnetcoreapp/Pages/Index.cshtml
@@ -9,4 +9,7 @@
     <p>Hello, World!</p>
     </br>
     <p>The time on the servers is @DateTime.Now</p>
+    </br>
+    <p class="infoText" id="hobbies"></p>
+    {controller.}
 </div>
