--- a/aspnetcoreapp/Pages/Index.cshtml
+++ b/aspnetcoreapp/Pages/Index.cshtml
@@ -10,6 +10,5 @@
     </br>
     <p>The time on the servers is @DateTime.Now</p>
     </br>
-    <p class="infoText" id="hobbies"></p>
-    {controller.}
+    <p>@Model.Hobbies</p>
 </div>
